tests/baselines/reference/infinitelyExpandingTypes2.errors.txt
==== tests/cases/compiler/infinitelyExpandingTypes2.ts (1 errors) ====
    interface Foo<T> {
        x: Foo<Foo<T>>;
    } 
    
    interface Bar<T> extends Foo<T> {
        y: string;
    }
    
    function f(p: Foo<number>) {
        console.log(p);
        ~~~~~~~
!!! infinitelyExpandingTypes2.ts(10,5): error TS2095: Could not find symbol 'console'.
    }
    
    var v: Bar<number> = null;
    
    f(v); // should not error
    